--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -164,6 +164,7 @@ jobs:
         with:
           files: output/*.apk
           tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minorVersion }}
+          name: ${{ needs.prepare-version.outputs.newVersion }}
           release_name: ${{ needs.prepare-version.outputs.newVersion }}
           body_path: Technical/release_base.md
           draft: false
