--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -3,22 +3,16 @@ name: Publish_DEV
 env:
   branch-name: 'develop'
   varrible: 'DEV_VERSION'
+  dev-version: 'DEV_VERSION'
 
 on:
   pull_request:
     branches:
-      - develop
-  push:
-    branches:
-      - develop
-  workflow_run:
-    workflows: ["Publish"]
-    types:
-      - completed
-
+      - main
 permissions:
   contents: write
   pull-requests: write
+
 
 jobs:
   prepare-version:
@@ -28,143 +22,154 @@ jobs:
       versionCode: ${{ steps.version.outputs.versionCode }}
       minorVersion: ${{ steps.version.outputs.minorVersion }}
     steps:
-      # 1) Globális safe.directory beállítás a Git számára, hogy ne panaszkodjon tulajdonjogra.
-      - name: Configure Git safe directory (Ubuntu)
+      - name: Get the current version using GitHub CLI
+        id: get-version
         run: |
-          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+          VERSION=$(gh api \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
+            --jq '.value')
+          echo "Current version: $VERSION"
+          if [[ -z "$VERSION" ]]; then
+            echo "Error: VERSION is empty"
+            exit 1
+          fi
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+          echo "MAJOR=$MAJOR" >> $GITHUB_ENV
+          echo "MINOR=$MINOR" >> $GITHUB_ENV
+          echo "PATCH=$PATCH" >> $GITHUB_ENV
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
 
-      # 2) Checkout a repóba (nem törlünk semmit kézzel, a manual init miatt amúgy is felülírjuk).
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          persist-credentials: false
-          # Fontos: clean: false => ne töröljön automatikusan, mielőtt klónoz!
-          clean: false
-
-      # 3) Manually initialize Git repository (ha mindenképp kell a fetch + reset).
-      - name: Manually initialize Git repository
+      - name: Increment the MINOR version
+        id: increment-minor
         run: |
-          git init
-          git remote remove origin || true
-          git remote add origin https://github.com/${{ github.repository }}.git
-          git fetch --depth=1 origin refs/heads/develop
-          git reset --hard FETCH_HEAD
+          NEW_MINOR=$((MINOR + 1))
+          echo "New MINOR version: $NEW_MINOR"
+          echo "new-minor=$NEW_MINOR" >> $GITHUB_ENV
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
 
-      # Itt helyezheted el a verziószám kiszámítását / beállítását is:
-      # - name: Calculate version
-      #   id: version
-      #   run: ...
-      #
-      # outputs:
-      #   newVersion: ${{ steps.version.outputs.newVersion }}
-      #   versionCode: ${{ steps.version.outputs.versionCode }}
-      #   minorVersion: ${{ steps.version.outputs.minorVersion }}
-
+      - name: Update the version using GitHub CLI
+        id: version
+        run: |
+          NEW_VERSION="$MAJOR.$NEW_MINOR.$PATCH"
+          echo "Updating version to: $NEW_VERSION"
+          echo "newVersion=$NEW_VERSION" >> $GITHUB_OUTPUT
+          echo "versionCode=$MAJOR" >> $GITHUB_OUTPUT
+          echo "minorVersion=$NEW_MINOR" >> $GITHUB_OUTPUT
+          echo newVersion: $NEW_VERSION
+          echo versionCode: $MAJOR
+          echo minorVersion: $NEW_MINOR
+          gh api \
+            --method PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
+            -f "name=STABIL_VERSION" -f "value=$NEW_VERSION"
+            
+            gh api \
+            --method PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/DEV_VERSION \
+            -f "name=DEV_VERSION" -f "value=$NEW_VERSION"
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
+          NEW_MINOR: ${{ env.new-minor }}    
+        
+        
   build-apk:
-    runs-on: windows-latest
+    runs-on: [windows-latest]
+    #runs-on: [self-hosted, Windows]
     needs: prepare-version
     steps:
-      # 1) Opcionális: saját kézi törlés, ha maradt valami a workspace-ben
-      - name: Cleanup runner workspace
-        run: |
-          if exist D:\git_runner\actions-runner\_work\KoOrderRegister\KoOrderRegister (
-            rd /s /q D:\git_runner\actions-runner\_work\KoOrderRegister\KoOrderRegister
-          ) else (
-            echo "Directory not found"
-          )
-        shell: cmd
-
-      # 2) Globális safe.directory beállítás, mielőtt a Checkout Action futna.
-      - name: Configure Git safe directory (Windows)
-        run: |
-          git config --global --add safe.directory "D:/git_runner/actions-runner/_work/KoOrderRegister/KoOrderRegister"
-        shell: cmd
-
-      # 3) Checkout (fetch-depth=0, clean: false – ne törölje a repót újra).
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          persist-credentials: false
-          clean: false
-
-      - name: Debug Output Values
-        run: |
-          echo New Version: ${{ needs.prepare-version.outputs.newVersion }}
-          echo Version Code: ${{ needs.prepare-version.outputs.versionCode }}
-        shell: cmd
-
+      - uses: actions/checkout@v2
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '8.0.x'
-
+      - name: Debug Output Values
+        run: |
+          echo "New Version: ${{ needs.prepare-version.outputs.newVersion }}"
+          echo "Version Code: ${{ needs.prepare-version.outputs.versionCode }}"
       - name: Install .NET MAUI Android workloads
         run: dotnet workload install maui-android
-        shell: cmd
-
       - name: Install .NET SDK maui
         run: dotnet workload install maui
-        shell: cmd
-
       - name: Run APK build script
-        run: .\build_apk.bat
-        shell: cmd
+        run: cmd /c ".\build_apk.bat"
         env:
           KEYPASS: ${{ secrets.KEYPASS }}
           NEW_VERSION: ${{ needs.prepare-version.outputs.newVersion }}
           NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
           BUILD_VERSION: ${{ env.varrible }}
-
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: apk-artifact
           path: output\*.apk
 
+  build-msix:
+    runs-on: [self-hosted, Windows]
+    needs: prepare-version
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '8.0.x'
+      - name: Debug Output Values
+        run: |
+          echo "New Version: ${{ needs.prepare-version.outputs.newVersion }}"
+      - name: Install Certificate
+        run: |
+          Import-PfxCertificate -FilePath "KoOrderRegister\Technical\kor.pfx" `
+          -CertStoreLocation Cert:\CurrentUser\My `
+          -Password (ConvertTo-SecureString -String kor -Force -AsPlainText)
+        shell: powershell
+      - name: Run MSIX build script
+        run: cmd /c ".\build_msix.bat"
+        env:
+          KEYPASS: ${{ secrets.KEYPASS }}
+          NEW_VERSION: ${{ needs.prepare-version.outputs.newVersion }}
+          NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
+          BUILD_VERSION: ${{ env.varrible }}
+      - name: Upload MSIX
+        uses: actions/upload-artifact@v4
+        with:
+          name: msix-artifact
+          path: output\*.msix
+
   release:
     runs-on: [self-hosted, Windows]
-    needs: [prepare-version, build-apk]
+    needs: [prepare-version, build-apk, build-msix]
     steps:
-      # 1) Opcionális: töröljük a workspace-et
-      - name: Cleanup runner workspace
+      - name: Delete output
         run: |
-          if exist D:\git_runner\actions-runner\_work\KoOrderRegister\KoOrderRegister (
-            rd /s /q D:\git_runner\actions-runner\_work\KoOrderRegister\KoOrderRegister
-          ) else (
-            echo "Directory not found"
-          )
-        shell: cmd
-
-      # 2) Biztonságos könyvtár hozzáadása a git globális confighoz
-      - name: Configure Git safe directory (Self-hosted Windows)
-        run: |
-          git config --global --add safe.directory "D:/git_runner/actions-runner/_work/KoOrderRegister/KoOrderRegister"
-        shell: cmd
-
-      # 3) Checkout
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          persist-credentials: false
-          clean: false
-
-      # 4) Letöltjük az előző job-ban feltöltött APK-t
+          if (Test-Path -Path output) { Remove-Item -Recurse -Force output }
+          if (Test-Path -Path output) { Get-ChildItem -Path output -Recurse | Remove-Item -Force }
+          mkdir output
       - name: Download APK Artifact
         uses: actions/download-artifact@v4
         with:
           name: apk-artifact
-
       - name: Move APK Artifact
-        run: move *.apk output\
-        shell: cmd
-
+        run: |
+          mv *.apk output/
+      - name: Download MSIX Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: msix-artifact
+      - name: Move MSIX Artifact
+        run: |
+          mv *.msix output/
       - name: Create or Update Release
         uses: softprops/action-gh-release@v1
         with:
-          files: output/*.apk
+          files: output/*.apk,output/*.msix,KoOrderRegister/Technical/kor.pfx
           tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minorVersion }}
-          name: ${{ needs.prepare-version.outputs.newVersion }}
           release_name: ${{ needs.prepare-version.outputs.newVersion }}
           body_path: Technical/release_base.md
           draft: false
