--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -3,12 +3,19 @@ name: Publish_DEV
 env:
   branch-name: 'develop'
   varrible: 'DEV_VERSION'
-  dev-version: 'DEV_VERSION'
 
 on:
   pull_request:
     branches:
-      - main
+      - develop
+  push:
+    branches:
+      - develop
+  workflow_run:
+    workflows: ["Publish"] 
+    types:
+      - completed
+
 permissions:
   contents: write
   pull-requests: write
@@ -28,7 +35,7 @@ jobs:
           VERSION=$(gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
+            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/DEV_VERSION \
             --jq '.value')
           echo "Current version: $VERSION"
           if [[ -z "$VERSION" ]]; then
@@ -45,44 +52,38 @@ jobs:
       - name: Increment the MINOR version
         id: increment-minor
         run: |
-          NEW_MINOR=$((MINOR + 1))
-          echo "New MINOR version: $NEW_MINOR"
-          echo "new-minor=$NEW_MINOR" >> $GITHUB_ENV
+          NEW_PATCH=$((PATCH + 1))
+          echo "New MINOR version: $NEW_PATCH"
+          echo "new-minor=$NEW_PATCH" >> $GITHUB_ENV
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Update the version using GitHub CLI
         id: version
         run: |
-          NEW_VERSION="$MAJOR.$NEW_MINOR.$PATCH"
+          NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
           echo "Updating version to: $NEW_VERSION"
           echo "newVersion=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "versionCode=$MAJOR" >> $GITHUB_OUTPUT
-          echo "minorVersion=$NEW_MINOR" >> $GITHUB_OUTPUT
+          echo "minorVersion=$MINOR" >> $GITHUB_OUTPUT
           echo newVersion: $NEW_VERSION
           echo versionCode: $MAJOR
-          echo minorVersion: $NEW_MINOR
+          echo minorVersion: $MINOR
           gh api \
-            --method PATCH \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
-            -f "name=STABIL_VERSION" -f "value=$NEW_VERSION"
-            
-            gh api \
             --method PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/DEV_VERSION \
             -f "name=DEV_VERSION" -f "value=$NEW_VERSION"
+            
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
-          NEW_MINOR: ${{ env.new-minor }}    
+          NEW_PATCH: ${{ env.new-minor }}    
         
         
   build-apk:
-    runs-on: [windows-latest]
-    #runs-on: [self-hosted, Windows]
+    #runs-on: [windows-latest]
+    runs-on: [self-hosted, Windows]
     needs: prepare-version
     steps:
       - uses: actions/checkout@v2
@@ -169,7 +170,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: output/*.apk,output/*.msix,KoOrderRegister/Technical/kor.pfx
-          tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minorVersion }}
+          tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minorVersion }}.dev
           release_name: ${{ needs.prepare-version.outputs.newVersion }}
           body_path: Technical/release_base.md
           draft: false
