--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -84,26 +84,38 @@ jobs:
     steps:
       - name: Fix Git Safe Directory (Windows)
         run: git config --global --add safe.directory "${{ github.workspace }}"
+        shell: cmd
+
       - uses: actions/checkout@v2
+
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '8.0.x'
+
       - name: Debug Output Values
         run: |
-          echo "New Version: ${{ needs.prepare-version.outputs.newVersion }}"
-          echo "Version Code: ${{ needs.prepare-version.outputs.versionCode }}"
+          echo New Version: ${{ needs.prepare-version.outputs.newVersion }}
+          echo Version Code: ${{ needs.prepare-version.outputs.versionCode }}
+        shell: cmd
+
       - name: Install .NET MAUI Android workloads
         run: dotnet workload install maui-android
+        shell: cmd
+
       - name: Install .NET SDK maui
         run: dotnet workload install maui
+        shell: cmd
+
       - name: Run APK build script
-        run: cmd /c ".\build_apk.bat"
+        run: .\build_apk.bat
+        shell: cmd
         env:
           KEYPASS: ${{ secrets.KEYPASS }}
           NEW_VERSION: ${{ needs.prepare-version.outputs.newVersion }}
           NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
           BUILD_VERSION: ${{ env.varrible }}
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
@@ -116,27 +128,35 @@ jobs:
     steps:
       - name: Fix Git Safe Directory (Windows)
         run: git config --global --add safe.directory "${{ github.workspace }}"
+        shell: cmd
+
       - uses: actions/checkout@v2
+
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '8.0.x'
+
       - name: Debug Output Values
         run: |
-          echo "New Version: ${{ needs.prepare-version.outputs.newVersion }}"
+          echo New Version: ${{ needs.prepare-version.outputs.newVersion }}
+        shell: cmd
+
       - name: Install Certificate
         run: |
-          Import-PfxCertificate -FilePath "KoOrderRegister\Technical\kor.pfx" `
-          -CertStoreLocation Cert:\CurrentUser\My `
-          -Password (ConvertTo-SecureString -String kor -Force -AsPlainText)
-        shell: powershell
+          powershell -NoProfile -ExecutionPolicy Bypass -Command ^
+            "Import-PfxCertificate -FilePath 'KoOrderRegister\\Technical\\kor.pfx' -CertStoreLocation Cert:\CurrentUser\My -Password (ConvertTo-SecureString -String kor -Force -AsPlainText)"
+        shell: cmd
+
       - name: Run MSIX build script
-        run: cmd /c ".\build_msix.bat"
+        run: .\build_msix.bat
+        shell: cmd
         env:
           KEYPASS: ${{ secrets.KEYPASS }}
           NEW_VERSION: ${{ needs.prepare-version.outputs.newVersion }}
           NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
           BUILD_VERSION: ${{ env.varrible }}
+
       - name: Upload MSIX
         uses: actions/upload-artifact@v4
         with:
@@ -160,8 +180,8 @@ jobs:
           name: apk-artifact
 
       - name: Move APK Artifact
-        run: |
-          mv *.apk output/
+        run: mv *.apk output/
+        shell: cmd
 
       - name: Download MSIX Artifact
         uses: actions/download-artifact@v4
@@ -169,8 +189,8 @@ jobs:
           name: msix-artifact
 
       - name: Move MSIX Artifact
-        run: |
-          mv *.msix output/
+        run: mv *.msix output/
+        shell: cmd
 
       - name: Create or Update Release
         uses: softprops/action-gh-release@v1
