--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -113,7 +113,7 @@ jobs:
           path: output\*.apk
 
   build-msix:
-    runs-on: [self-hosted, Windows]
+    runs-on: [windows-latest]
     needs: prepare-version
     steps:
       - uses: actions/checkout@v2
