--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -165,6 +165,9 @@ jobs:
     runs-on: [windows-latest]
     needs: [prepare-version, build-apk, build-msix]
     steps:
+    
+    - uses: actions/checkout@v2
+    
     - name: Create (or clean) output folder
       run: |
         if exist output rmdir /S /Q output
