--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -80,31 +80,44 @@ jobs:
           NEW_MINOR: ${{ env.new-minor }}    
         
         
-  build-apk:
+ build-apk:
     runs-on: [windows-latest]
-    #runs-on: [self-hosted, Windows]
     needs: prepare-version
     steps:
+      - name: Fix Git Safe Directory (Windows)
+        run: git config --global --add safe.directory "${{ github.workspace }}"
+        shell: cmd
+
       - uses: actions/checkout@v2
+
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '8.0.x'
+
       - name: Debug Output Values
         run: |
-          echo "New Version: ${{ needs.prepare-version.outputs.newVersion }}"
-          echo "Version Code: ${{ needs.prepare-version.outputs.versionCode }}"
+          echo New Version: ${{ needs.prepare-version.outputs.newVersion }}
+          echo Version Code: ${{ needs.prepare-version.outputs.versionCode }}
+        shell: cmd
+
       - name: Install .NET MAUI Android workloads
         run: dotnet workload install maui-android
+        shell: cmd
+
       - name: Install .NET SDK maui
         run: dotnet workload install maui
+        shell: cmd
+
       - name: Run APK build script
-        run: cmd /c ".\build_apk.bat"
+        run: .\build_apk.bat
+        shell: cmd
         env:
           KEYPASS: ${{ secrets.KEYPASS }}
           NEW_VERSION: ${{ needs.prepare-version.outputs.newVersion }}
           NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
           BUILD_VERSION: ${{ env.varrible }}
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
@@ -112,30 +125,38 @@ jobs:
           path: output\*.apk
 
   build-msix:
-    runs-on: [self-hosted, Windows]
+    runs-on: [windows-latest]
     needs: prepare-version
     steps:
+      - name: Fix Git Safe Directory (Windows)
+        run: git config --global --add safe.directory "${{ github.workspace }}"
+        shell: cmd
+
       - uses: actions/checkout@v2
+
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '8.0.x'
+
+      - name: Install all MAUI workloads (windows, android, ios, maccatalyst)
+        run: dotnet workload install maui-windows maui-android maui-ios maui-maccatalyst
+        shell: cmd
+
       - name: Debug Output Values
         run: |
-          echo "New Version: ${{ needs.prepare-version.outputs.newVersion }}"
-      - name: Install Certificate
-        run: |
-          Import-PfxCertificate -FilePath "KoOrderRegister\Technical\kor.pfx" `
-          -CertStoreLocation Cert:\CurrentUser\My `
-          -Password (ConvertTo-SecureString -String kor -Force -AsPlainText)
-        shell: powershell
+          echo New Version: ${{ needs.prepare-version.outputs.newVersion }}
+        shell: cmd
+
       - name: Run MSIX build script
-        run: cmd /c ".\build_msix.bat"
+        run: .\build_msix.bat
+        shell: cmd
         env:
           KEYPASS: ${{ secrets.KEYPASS }}
           NEW_VERSION: ${{ needs.prepare-version.outputs.newVersion }}
           NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
           BUILD_VERSION: ${{ env.varrible }}
+
       - name: Upload MSIX
         uses: actions/upload-artifact@v4
         with:
@@ -143,43 +164,45 @@ jobs:
           path: output\*.msix
 
   release:
-    runs-on: [self-hosted, Windows]
+    runs-on: [windows-latest]
     needs: [prepare-version, build-apk, build-msix]
     steps:
-      - name: Delete output
-        run: |
-          if (Test-Path -Path output) { Remove-Item -Recurse -Force output }
-          if (Test-Path -Path output) { Get-ChildItem -Path output -Recurse | Remove-Item -Force }
-          mkdir output
-      - name: Download APK Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: apk-artifact
-      - name: Move APK Artifact
-        run: |
-          mv *.apk output/
-      - name: Download MSIX Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: msix-artifact
-      - name: Move MSIX Artifact
-        run: |
-          mv *.msix output/
-      - name: Create or Update Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: output/*.apk,output/*.msix,KoOrderRegister/Technical/kor.pfx
-          tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minorVersion }}
-          release_name: ${{ needs.prepare-version.outputs.newVersion }}
-          body_path: Technical/release_base.md
-          draft: false
-          prerelease: false
-          generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+    
+    - uses: actions/checkout@v2
+    
+    - name: Create (or clean) output folder
+      run: |
+        if exist output rmdir /S /Q output
+        mkdir output
+      shell: cmd
 
+    - name: Download APK Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: apk-artifact
 
+    - name: Move APK Artifact
+      run: mv *.apk output/
+      shell: cmd
 
+    - name: Download MSIX Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: msix-artifact
 
+    - name: Move MSIX Artifact
+      run: mv *.msix output/
+      shell: cmd
 
- 
+    - name: Create or Update Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: output/*.apk,output/*.msix,KoOrderRegister/Technical/kor.pfx
+        tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minorVersion }}
+        release_name: ${{ needs.prepare-version.outputs.newVersion }}
+        body_path: Technical/release_base.md
+        draft: false
+        prerelease: false
+        generate_release_notes: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
