--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -79,10 +79,9 @@ jobs:
           GH_TOKEN: ${{ secrets.TOKEN }}
           NEW_MINOR: ${{ env.new-minor }}    
         
-        
+ 
   build-apk:
     runs-on: [windows-latest]
-    #runs-on: [self-hosted, Windows]
     needs: prepare-version
     steps:
       - uses: actions/checkout@v2
@@ -94,6 +93,8 @@ jobs:
         run: |
           echo "New Version: ${{ needs.prepare-version.outputs.newVersion }}"
           echo "Version Code: ${{ needs.prepare-version.outputs.versionCode }}"
+      - name: Run Translator
+        run: cmd /c "Technical\translator\main.exe --new-only"
       - name: Install .NET MAUI Android workloads
         run: dotnet workload install maui-android
       - name: Install .NET SDK maui
@@ -123,6 +124,8 @@ jobs:
       - name: Debug Output Values
         run: |
           echo "New Version: ${{ needs.prepare-version.outputs.newVersion }}"
+      - name: Run Translator
+        run: cmd /c "Technical\translator\main.exe --new-only"
       - name: Install Certificate
         run: |
           Import-PfxCertificate -FilePath "KoOrderRegister\Technical\kor.pfx" `
