--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,7 +28,7 @@ jobs:
           VERSION=$(gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/DEV_VERSION \
+            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
             --jq '.value')
           echo "Current version: $VERSION"
           if [[ -z "$VERSION" ]]; then
@@ -45,24 +45,31 @@ jobs:
       - name: Increment the MINOR version
         id: increment-minor
         run: |
-          NEW_PATCH=$((PATCH + 1))
-          echo "New MINOR version: $NEW_PATCH"
-          echo "new-minor=$NEW_PATCH" >> $GITHUB_ENV
+          NEW_MINOR=$((MINOR + 1))
+          echo "New MINOR version: $NEW_MINOR"
+          echo "new-minor=$NEW_MINOR" >> $GITHUB_ENV
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Update the version using GitHub CLI
         id: version
         run: |
-          NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
+          NEW_VERSION="$MAJOR.$NEW_MINOR.$PATCH"
           echo "Updating version to: $NEW_VERSION"
           echo "newVersion=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "versionCode=$MAJOR" >> $GITHUB_OUTPUT
-          echo "minorVersion=$MINOR" >> $GITHUB_OUTPUT
+          echo "minorVersion=$NEW_MINOR" >> $GITHUB_OUTPUT
           echo newVersion: $NEW_VERSION
           echo versionCode: $MAJOR
-          echo minorVersion: $MINOR
+          echo minorVersion: $NEW_MINOR
           gh api \
+            --method PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
+            -f "name=STABIL_VERSION" -f "value=$NEW_VERSION"
+            
+            gh api \
             --method PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
@@ -70,7 +77,7 @@ jobs:
             -f "name=DEV_VERSION" -f "value=$NEW_VERSION"
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
-          NEW_PATCH: ${{ env.new-minor }}    
+          NEW_MINOR: ${{ env.new-minor }}       
 
   build-apk:
     runs-on: [windows-latest]
